--- a/templates/sandbox.html
+++ b/templates/sandbox.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <!-- Head contents -->
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,40 +18,40 @@
             background-color: #f1f1f1;
 
         }
+
         #sql-query { 
             width: 60%;
             min-height: 150px;
             margin-bottom: 1rem;
             margin-top: 1rem;
         }
+
         .dataTables_wrapper {
             margin-top: 20px;
         }
+
         .query-results-container {
             margin-top: 20px;
         }
 
-        /* Intro text styling */
         .intro-text {
-            background-color: #fff; /* White background */
-            border-radius: 8px; /* Rounded corners */
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Subtle shadow */
-            padding: 1rem; /* Padding inside the container */
-            margin: 20px auto; /* Center the container with automatic horizontal margins */
-            max-width: 100rem; /* Maximum width with centered content */
-            font-family: 'Arial', sans-serif; /* Font family */
-            color: #333; /* Text color */
+            background-color: #fff; 
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+            padding: 1rem; 
+            margin: 20px auto; 
+            max-width: 100rem; 
+            font-family: 'Arial', sans-serif; 
+            color: #333; 
         }
 
         .intro-text p {
-            margin: 0; /* Remove default paragraph margin */
-            font-size: 1rem; /* Font size */
-            line-height: 1.5; /* Line height for better readability */
-            text-align: center; /* Center the text */
+            margin: 0; 
+            font-size: 1rem; 
+            line-height: 1.5; 
+            text-align: center; 
         }
 
-
-        /* Table name styling */
         .table-name {
             text-transform: uppercase;
             font-weight: bold;
@@ -69,27 +68,25 @@
         }
 
         #message {
-            color: #D8000C; /* Red color for error messages */
-            background-color: #FFD2D2; /* Light red background */
-            margin: 20px 0; /* Add some margin above and below the message box */
-            padding: 10px; /* Add some padding inside the message box */
-            border: 1px solid #D8000C; /* A solid border that matches the text color */
-            border-radius: 5px; /* Rounded corners for a smoother look */
-            text-align: center; /* Align text to the left */
+            color: #D8000C; 
+            background-color: #FFD2D2;
+            margin: 20px 0;
+            padding: 10px; 
+            border: 1px solid #D8000C;
+            border-radius: 5px; 
+            text-align: center; 
             width: 100%; 
-            box-sizing: border-box; /* Include padding and border in the element's total width and height */
+            box-sizing: border-box; 
             display: none;
             font-size: 0.8rem;
             height: 100%;
-        
         }
 
         #message:before {
-            content: "\26A0"; /* Unicode character for warning sign */
-            padding-right: 5px; /* Add some space between the icon and the text */
-            font-weight: bold; /* Make the warning sign bold */
+            content: "\26A0"; 
+            padding-right: 5px; 
+            font-weight: bold; 
         }
-
     
     </style>
 </head>
@@ -101,9 +98,9 @@
         <p>Welcome to Sandbox! You may only execute READ-ONLY queries on the three tables below.</p>
     </div>
 
-    
+    <!-- populate table data from backend -->
     {% for table_name, table_info in tables_data.items() %}
-        <h3 class="table-name">{{ table_name | capitalize }}</h3> <!-- Capitalize table name -->
+        <h3 class="table-name">{{ table_name | capitalize }}</h3> 
         <div class="table-container" id="table-container-{{table_name}}">
             <table id="{{ table_name }}-table" class="display">
                 <thead>
@@ -127,14 +124,19 @@
     {% endfor %}
 
     <p class="query-block">Enter your SQL Query in the space below.</p>
+    <!-- area to enter sql query to send to backend -->
     <textarea id="sql-query" class="form-control" placeholder="Your SQL Query"></textarea>
     <div id="message"></div>
     <button onclick="executeQuery()" class="btn btn-primary mt-2" id="run-query-btn">Run Query</button><br>
     <a href="/home" class="btn btn-primary">Back</a>
 
-    <div id="query-results" class="query-results-container"></div>
+    <div id="query-results" class="query-results-container">
+        <!-- query results will be populated here -->
+    </div>
 
     <script>
+
+        // tables are displayed using DataTables library
           $(document).ready(function() {
             // Initialize DataTables for each table
             $('#students-table').DataTable();
@@ -143,6 +145,8 @@
             window.resultTable = $('#result-table').DataTable();
 
         });
+
+        // function to execute query entered by user
         function executeQuery() {
             const query = document.getElementById("sql-query").value;
             document.getElementById("query-results").innerHTML = '';
@@ -164,8 +168,6 @@
                     // Format and display data
                     $(document.getElementById("query-results")).html('<table id="result-table" class="display table table-striped table-bordered"></table>');
 
-                    // const formattedResults = formatResults(data);
-                    // document.getElementById("query-results").innerHTML = formattedResults;
                     window.resultTable = $('#result-table').DataTable({
                         data: data,
                         columns: Object.keys(data[0]).map(function(col) {
@@ -179,9 +181,9 @@
             .catch(error => console.error('Error:', error));
         }
 
+        // function to format results of user query result
         function formatResults(data) {
             let html = '<table><thead><tr>';
-            // Assuming the first row contains column headers
             for (const header of Object.keys(data[0])) {
                 html += `<th>${header}</th>`;
             }
@@ -197,9 +199,6 @@
             html += '</tbody></table>';
             return html;
         }
-
-        
-
 
     </script>
 </body>
