--- a/templates/sandbox.html
+++ b/templates/sandbox.html
@@ -95,7 +95,8 @@
 <body class = "bg-light">
     <h1 class="text-center mb-3">Sandbox Mode</h1>
     <div class="intro-text text-center">
-        <p>Welcome to Sandbox! You may only execute READ-ONLY queries on the three tables below.</p>
+        <p>Welcome to Sandbox! You may only execute READ-ONLY queries on the tables below.</p>
+        <p>There are three tables: students, courses and enrolments.</p>
     </div>
 
     <!-- populate table data from backend -->
