--- a/templates/index.html
+++ b/templates/index.html
@@ -989,7 +989,7 @@
                                 console.error('Error:', error);
                                 });
                     }
-                    else{
+                    else{ // hide completed topics
                         const container = document.querySelector(".completed-topics-text-container");
                         container.innerHTML = '';
                         completedTopicsButton.textContent = 'View Completed Topics';
